--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zubeirdev",
+  "name": "zubeirtech",
   "version": "0.0.0",
   "private": true,
   "description": "Small description for zubeirdev goes here",
